update the conf.py and build for first major version #major

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = Plume-Learn
-description = Add a short description here!
+description = A Python package for visualizing and analyzing plume dynamics during thin-film growth, providing tools to process, visualize, and extract meaningful insights from in-situ plume images captured during Pulsed Laser Deposition (PLD) experiments.
 author = Yichen Guo
 author_email = yig319@lehigh.edu
 license = MIT
